Se cambio el nombre de la clase del boton a uno mas especifico.

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -21,7 +21,7 @@ body {
   box-shadow: 0 0 0 0.3px var(--db-caadi), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
-button{
+.main-button{
   width: 120px;
   height: 30px;
   color: rgb(238, 238, 238);
