--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -22,11 +22,16 @@ body {
 }
 
 .main-button{
-  width: 10vw;
-  height: 5vh;
-  color: rgb(238, 238, 238);
-  background-color: rgba(31, 49, 63);
-  border-radius: 20px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    color: rgb(238, 238, 238);
+    background-color: rgba(31, 49, 63);
+    border-radius: 20px;
+    padding: 10px 45px;
+    cursor: pointer;
+    @apply gap-2;
 }
 
 .main-link{
