--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -24,15 +24,20 @@ body {
     color: white;
     cursor: pointer;
     border-radius: 50px;
+    padding: 10px 45px;
 }
 
 .main-button{
     background-color: rgba(31, 49, 63);
+    padding: 10px 45px;
 }
 
 .main-button-secondary{
     background-color: rgba(107, 114, 128) !important;
-    padding: 10px 45px;
+}
+
+.back-button{
+    padding: 10px 20px !important;
 }
 
 .main-link{
